# LearnOpenGL

./: .clang-format  .gitignore  CMakeLists.txt  main  main.cpp
include/: BackgroudnRenderer.h  FTriangleRenderer.h  GLEnv.h  Renderer.h  RendererComposer.h  RendererImpl.h  STriangleRenderer.h  Shader.h  ShaderProgram.h  TextureRenderer.h  Window.h
include/glad/: glad.h
shader/: FTriangleFragment.fs  STriangleFragment.fs  TriangleVertex.vs
src/: Shader.cpp  ShaderProgram.cpp  Window.cpp  glad.c  main.cpp
